apps/base/media/bookshelf-ab/bookshelf-ab-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookshelf-ab-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://bookshelf-ab.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Bookshelf AB"
    gethomepage.dev/description: "Audiobook organizer/manager"
    gethomepage.dev/app: bookshelf-ab
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "mdi-book-music"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`bookshelf-ab.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: bookshelf-ab
          port: 8787
  tls: {}
